# muck

./: .gitignore  ChangeLog.md  LICENSE  muck.cabal  package.yaml
app/: Main.hs
src/: Screen.hs  TermEmu.hs
src/TermEmu/: Automata.hs  Parser.hs  SGR.hs
src/TermEmu/Parser/: SGR.hs
test/: Spec.hs
test/Test/: TermEmu.hs
test/Test/TermEmu/: Parser.hs
