name:                muck
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://tomjohnson.me.uk
license:             BSD3
license-file:        LICENSE
author:              Tom Johnson
maintainer:          public@tomjohnson.me.uk
copyright:           2018 Tom Johnson
category:            Tools
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable muck
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
